# gnux

./: .gitignore  README.md  build.py  format-code.py  format-cpp.py  pyproject.toml  setup.py  translatedocs.py
docs/en/: index.md  projectdesign.md
docs/ru/: article.md  index.md  projectdesign.md
ext/src/: gnuxcat.c  gnuxmkdir.c  gnuxmodule.c
gnuxlinux/: __main__.py
gnuxlinux/api/: __init__.py  base.py  utils.py
gnuxlinux/features/: slug.py
