[tool.poetry]
name = "gnuxlinux"
version = "0.1.2"
description = "gnu utilities eXtended"
authors = ["alexeev-prog <alexeev.dev@mail.ru>"]
license = "GNU LGPL 2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.9.4"
setuptools = "^75.6.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core", 'setuptools']
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gnuxlinux = "gnuxlinux.__main__:main"
